# CardJitsux

./: CardJitsu.sln  CardJitsu.vcxproj  CardJitsu.vcxproj.filters  Carta.cpp  Carta.h  Jugador.cpp  Jugador.h  Mazo.cpp  Mazo.h  README.md  Vista.cpp  Vista.h  main.cpp
Modelo/: CMakeLists.txt  Carta.cpp  Carta.h  Jugador.cpp  Jugador.h  Mazo.cpp  Mazo.h  Modelo.cpp  Modelo.h  Partida.cpp  Partida.h  main.cpp
x64/Debug/: CardJitsu.exe.recipe  CardJitsu.ilk  CardJitsu.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/CardJitsu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CardJitsu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
